[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/gui/MainMenuController.gd" type="Script" id=1]
[ext_resource path="res://scripts/gui/LevelSelectButton.gd" type="Script" id=2]
[ext_resource path="res://scripts/gui/UIHover.gd" type="Script" id=3]
[ext_resource path="res://art/gui/dynamicFontMain.tres" type="DynamicFont" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Holder" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainScreen" type="Control" parent="Holder"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Holder/MainScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.607843, 0.0901961, 0.266667, 1 )

[node name="Label" type="Label" parent="Holder/MainScreen"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 182.0
margin_right = 2.0
margin_bottom = 259.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Newgrounds Super Cool and Spectacular Game"
align = 1
valign = 1

[node name="Start" type="Button" parent="Holder/MainScreen"]
margin_left = 783.0
margin_top = 330.0
margin_right = 859.0
margin_bottom = 367.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 38, 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Start"
flat = true
script = ExtResource( 3 )

[node name="Credits" type="Button" parent="Holder/MainScreen"]
margin_left = 776.0
margin_top = 389.0
margin_right = 877.0
margin_bottom = 427.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 52.6667, 18.6667 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Credits"
flat = true
script = ExtResource( 3 )

[node name="Credits" type="Control" parent="Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_right = -1024.0

[node name="ColorRect" type="ColorRect" parent="Holder/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.607843, 0.376471, 1 )

[node name="Label" type="Label" parent="Holder/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "PUT LIST OF PEOPLE HERE"
align = 1
valign = 1

[node name="back" type="Button" parent="Holder/Credits"]
margin_left = 915.0
margin_top = 12.0
margin_right = 999.0
margin_bottom = 50.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 38, 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "back"
flat = true
script = ExtResource( 3 )

[node name="LevelSelect" type="Control" parent="Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1024.0
margin_right = 1024.0

[node name="ColorRect" type="ColorRect" parent="Holder/LevelSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.639216, 0.705882, 1 )

[node name="Label" type="Label" parent="Holder/LevelSelect"]
anchor_right = 1.0
margin_bottom = 77.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Level Select"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="Holder/LevelSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 104.0
margin_right = -20.0
margin_bottom = -20.0
columns = 2

[node name="Button" type="Button" parent="Holder/LevelSelect/GridContainer"]
margin_right = 37.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 19, 18 )
text = "1"
script = ExtResource( 2 )

[node name="Button2" type="Button" parent="Holder/LevelSelect/GridContainer"]
margin_left = 45.0
margin_right = 82.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 19, 18 )
text = "2"
script = ExtResource( 2 )
levelId = 1

[node name="back2" type="Button" parent="Holder/LevelSelect"]
margin_left = 22.0
margin_top = 10.0
margin_right = 106.0
margin_bottom = 48.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 38, 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "back"
flat = true
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Holder/MainScreen/Start" to="Holder/MainScreen/Start" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Holder/MainScreen/Start" to="Holder/MainScreen/Start" method="_on_mouse_exited"]
[connection signal="pressed" from="Holder/MainScreen/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Holder/MainScreen/Credits" to="Holder/MainScreen/Credits" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Holder/MainScreen/Credits" to="Holder/MainScreen/Credits" method="_on_mouse_exited"]
[connection signal="pressed" from="Holder/MainScreen/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="Holder/Credits/back" to="Holder/Credits/back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Holder/Credits/back" to="Holder/Credits/back" method="_on_mouse_exited"]
[connection signal="pressed" from="Holder/Credits/back" to="." method="_on_back_credits_pressed"]
[connection signal="mouse_entered" from="Holder/LevelSelect/GridContainer/Button" to="Holder/LevelSelect/GridContainer/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Holder/LevelSelect/GridContainer/Button" to="Holder/LevelSelect/GridContainer/Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Holder/LevelSelect/GridContainer/Button" to="Holder/LevelSelect/GridContainer/Button" method="_on_pressed"]
[connection signal="mouse_entered" from="Holder/LevelSelect/GridContainer/Button2" to="Holder/LevelSelect/GridContainer/Button2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Holder/LevelSelect/GridContainer/Button2" to="Holder/LevelSelect/GridContainer/Button2" method="_on_mouse_exited"]
[connection signal="pressed" from="Holder/LevelSelect/GridContainer/Button2" to="Holder/LevelSelect/GridContainer/Button2" method="_on_pressed"]
[connection signal="mouse_entered" from="Holder/LevelSelect/back2" to="Holder/LevelSelect/back2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Holder/LevelSelect/back2" to="Holder/LevelSelect/back2" method="_on_mouse_exited"]
[connection signal="pressed" from="Holder/LevelSelect/back2" to="." method="_on_back_level_pressed"]
